--- a/portfolio.html
+++ b/portfolio.html
@@ -25,24 +25,26 @@
 
         <nav>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-            <li class="item"><a href="#contacts" class="link">Контакти</a></li>
+            <li class="site-nav__item"><a href="./index.html" class="link">Студія</a></li>
+            <li class="site-nav__item">
+              <a href="./portfolio.html" class="link current">Портфоліо</a>
+            </li>
+            <li class="site-nav__item"><a href="#contacts" class="link">Контакти</a></li>
           </ul>
         </nav>
 
         <ul class="auth-nav">
-          <li class="item">
+          <li class="auth-nav__item">
             <a href="maito:info@devstudio.com" class="link">
-              <svg class="link-svg" width="16px" height="12px">
+              <svg class="auth-nav__link-svg" width="16px" height="12px">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="item">
+          <li class="auth-nav__item">
             <a href="tel:+380961111111" class="link">
-              <svg class="link-svg" width="10px" height="16px">
+              <svg class="auth-nav__link-svg" width="10px" height="16px">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -58,156 +60,170 @@
         <div class="container">
           <h1 class="section-title portfolio-title">Portfolio</h1>
           <!-- Фільтр -->
-          <ul class="filter-button">
-            <li><button type="button" class="button secondary-filter">Усі</button></li>
-            <li><button type="button" class="button secondary-filter">Веб-сайти</button></li>
-            <li><button type="button" class="button secondary-filter">Додатки</button></li>
-            <li><button type="button" class="button secondary-filter">Дизайн</button></li>
-            <li><button type="button" class="button secondary-filter">Маркетинг</button></li>
+          <ul class="filter__button">
+            <li>
+              <button type="button" class="button filter__button-secondary-filter">Усі</button>
+            </li>
+            <li>
+              <button type="button" class="button filter__button-secondary-filter">
+                Веб-сайти
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button filter__button-secondary-filter">Додатки</button>
+            </li>
+            <li>
+              <button type="button" class="button filter__button-secondary-filter">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="button filter__button-secondary-filter">
+                Маркетинг
+              </button>
+            </li>
           </ul>
           <!-- Роботи компанії -->
           <ul class="work-examples">
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img8.jpg" alt="Ноутбук" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Технокряк</h2>
-                  <p class="text">Веб-сайт</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Технокряк</h2>
+                  <p class="work-examples__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img16.jpg" alt="Баскетболісти" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="text">Дизайн</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="work-examples__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img9.jpg" alt="Лого ресторану" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Ресторан Seafood</h2>
-                  <p class="text">Додаток</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Ресторан Seafood</h2>
+                  <p class="work-examples__text">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img10.jpg" alt="Навушники" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Проєкт Prime</h2>
-                  <p class="text">Маркетинг</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Проєкт Prime</h2>
+                  <p class="work-examples__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img11.jpg" alt="Коробки" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Проєкт Boxes</h2>
-                  <p class="text">Додаток</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Проєкт Boxes</h2>
+                  <p class="work-examples__text">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img12.jpg" alt="Монітор" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Inspiration has no Borders</h2>
-                  <p class="text">Веб-сайт</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Inspiration has no Borders</h2>
+                  <p class="work-examples__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img13.jpg" alt="Книга" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Видання Limited Edition</h2>
-                  <p class="text">Дизайн</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Видання Limited Edition</h2>
+                  <p class="work-examples__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img14.jpg" alt="Ярлик товару" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Проєкт LAB</h2>
-                  <p class="text">Маркетинг</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Проєкт LAB</h2>
+                  <p class="work-examples__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="card">
+            <li class="work-examples__card">
               <a href="" class="link">
-                <div class="card-image">
+                <div class="work-examples__card-image">
                   <img src="./images/img15.jpg" alt="Відкритий ноутбук" width="370" height="294" />
-                  <p class="text-overlay">
+                  <p class="work-examples__text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="card-description">
-                  <h2 class="work-title">Growing Business</h2>
-                  <p class="text">Додаток</p>
+                <div class="work-examples__card-description">
+                  <h2 class="work-examples__work-title">Growing Business</h2>
+                  <p class="work-examples__text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -219,16 +235,16 @@
     <!-- Футер -->
     <footer class="page-footer" id="contacts">
       <div class="container">
-        <div class="footer-contacts">
+        <div class="page-footer__contacts">
           <a href="./index.html" class="logo-secondary"
             ><span class="logo-accent">Web</span>Studio</a
           >
           <address>
-            <ul class="footer-link">
-              <li class="address-link">
+            <ul class="page-footer__link">
+              <li class="page-footer__address-link">
                 <a
                   href="https://www.google.com/search?tbs=lf:1,lf_ui:1&tbm=lcl&sxsrf=ALiCzsYic9nBEuaywwjqmKYpoHVzt39aoQ:1659000467713&q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26&rflfq=1&num=10&ved=2ahUKEwivqL2sopv5AhWI_CoKHQGGCf0QtgN6BAgEEAQ"
-                  class="address"
+                  class="page-footer__address"
                   target="_blank"
                   rel="noreferrer noopener nofollow"
                   >м. Київ, пр-т Лесі Українки, 26</a
@@ -244,61 +260,61 @@
           </address>
         </div>
 
-        <div class="footer-network">
-          <h2 class="footer-title">приєднуйтесь</h2>
+        <div class="page-footer__network">
+          <h2 class="page-footer__title">приєднуйтесь</h2>
           <div>
-            <ul class="footer-network-list">
-              <li class="network-list">
+            <ul class="page-footer__network-list">
+              <li class="network__list">
                 <a
                   href="https://instagram.com"
-                  class="network-link"
+                  class="network__link"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
-                  <div class="footer-network-button">
-                    <svg class="network-icon" width="20px" height="20px">
+                  <div class="page-footer__network-button">
+                    <svg class="page-footer__network-icon" width="20px" height="20px">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </div>
                 </a>
               </li>
-              <li class="network-list">
+              <li class="network__list">
                 <a
                   href="https://twitter.com"
-                  class="network-link"
+                  class="network__link"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
-                  <div class="footer-network-button">
-                    <svg class="network-icon" width="20px" height="20px">
+                  <div class="page-footer__network-button">
+                    <svg class="page-footer__network-icon" width="20px" height="20px">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </div>
                 </a>
               </li>
-              <li class="network-list">
+              <li class="network__list">
                 <a
                   href="https://facebook.com"
-                  class="network-link"
+                  class="network__link"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
-                  <div class="footer-network-button">
-                    <svg class="network-icon" width="20px" height="20px">
+                  <div class="page-footer__network-button">
+                    <svg class="page-footer__network-icon" width="20px" height="20px">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </div>
                 </a>
               </li>
-              <li class="network-list">
+              <li class="network__list">
                 <a
                   href="https://linkedin.com"
-                  class="network-link"
+                  class="network__link"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
-                  <div class="footer-network-button">
-                    <svg class="network-icon" width="20px" height="20px">
+                  <div class="page-footer__network-button">
+                    <svg class="page-footer__network-icon" width="20px" height="20px">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </div>
@@ -308,21 +324,21 @@
           </div>
         </div>
 
-        <div class="footer-subscription">
-          <h2 class="footer-title">Підпишіться на розсилку</h2>
-          <form autocomplete="off" class="footer-form">
+        <div class="page-footer__subscription">
+          <h2 class="page-footer__title">Підпишіться на розсилку</h2>
+          <form autocomplete="off" class="page-footer__footer-form">
             <label for="subscribe">
               <input
-                class="footer-field"
+                class="page-footer__input-field"
                 type="email"
                 name="subscribe"
                 id="subscribe"
                 placeholder="E-mail"
               />
             </label>
-            <button type="submit" class="footer-button">
+            <button type="submit" class="page-footer__button">
               Підписатися
-              <svg width="24px" height="24px" class="icon-send">
+              <svg width="24px" height="24px" class="page-footer__icon-send">
                 <use href="./images/icons.svg#send"></use>
               </svg>
             </button>
