Add networw-icon hover in footer section

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                       target="_blank"
                       rel="noopener noreferer nofollow"
                     >
-                      <div class="network__button">
+                      <div class="page-footer__network-button">
                         <svg class="network__icon" width="20px" height="20px">
                           <use href="./images/icons.svg#linkedin"></use>
                         </svg>
@@ -519,12 +519,12 @@
               <li class="network__list">
                 <a
                   href="https://instagram.com"
-                  class="network__link"
+                  class="network-link"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
                   <div class="page-footer__network-button">
-                    <svg class="page-footer__network-icon" width="20px" height="20px">
+                    <svg class="network__icon" width="20px" height="20px">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </div>
@@ -538,7 +538,7 @@
                   rel="noopener noreferer nofollow"
                 >
                   <div class="page-footer__network-button">
-                    <svg class="page-footer__network-icon" width="20px" height="20px">
+                    <svg class="network__icon" width="20px" height="20px">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </div>
@@ -552,7 +552,7 @@
                   rel="noopener noreferer nofollow"
                 >
                   <div class="page-footer__network-button">
-                    <svg class="page-footer__network-icon" width="20px" height="20px">
+                    <svg class="network__icon" width="20px" height="20px">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </div>
@@ -566,7 +566,7 @@
                   rel="noopener noreferer nofollow"
                 >
                   <div class="page-footer__network-button">
-                    <svg class="page-footer__network-icon" width="20px" height="20px">
+                    <svg class="network__icon" width="20px" height="20px">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </div>
