--- a/portfolio.html
+++ b/portfolio.html
@@ -272,7 +272,7 @@
                   rel="noopener noreferer nofollow"
                 >
                   <div class="page-footer__network-button">
-                    <svg class="page-footer__network-icon" width="20px" height="20px">
+                    <svg class="network__icon" width="20px" height="20px">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </div>
@@ -286,7 +286,7 @@
                   rel="noopener noreferer nofollow"
                 >
                   <div class="page-footer__network-button">
-                    <svg class="page-footer__network-icon" width="20px" height="20px">
+                    <svg class="network__icon" width="20px" height="20px">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </div>
@@ -300,7 +300,7 @@
                   rel="noopener noreferer nofollow"
                 >
                   <div class="page-footer__network-button">
-                    <svg class="page-footer__network-icon" width="20px" height="20px">
+                    <svg class="network__icon" width="20px" height="20px">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </div>
@@ -314,7 +314,7 @@
                   rel="noopener noreferer nofollow"
                 >
                   <div class="page-footer__network-button">
-                    <svg class="page-footer__network-icon" width="20px" height="20px">
+                    <svg class="network__icon" width="20px" height="20px">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </div>
