Add network icon

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                       target="_blank"
                       rel="noopener noreferer nofollow"
                     >
-                      <div class="page-footer__network-button">
+                      <div class="network__button">
                         <svg class="network__icon" width="20px" height="20px">
                           <use href="./images/icons.svg#linkedin"></use>
                         </svg>
