Add network--dark modifier

--- a/index.html
+++ b/index.html
@@ -516,58 +516,58 @@
         <div class="page-footer__network">
           <h2 class="page-footer__title">приєднуйтесь</h2>
           <div>
-            <ul class="page-footer__network-list">
-              <li class="network__list">
+            <ul class="network network--dark">
+              <li class="network__list network--dark">
                 <a
                   href="https://instagram.com"
-                  class="network-link"
+                  class="network__link network--dark"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
-                  <div class="page-footer__network-button">
-                    <svg class="network__icon" width="20px" height="20px">
+                  <div class="network__button network--dark">
+                    <svg class="network__icon network--dark" width="20px" height="20px">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </div>
                 </a>
               </li>
-              <li class="network__list">
+              <li class="network__list network--dark">
                 <a
                   href="https://twitter.com"
-                  class="network__link"
+                  class="network__link network--dark"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
-                  <div class="page-footer__network-button">
-                    <svg class="network__icon" width="20px" height="20px">
+                  <div class="network__button network--dark">
+                    <svg class="network__icon network--dark" width="20px" height="20px">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </div>
                 </a>
               </li>
-              <li class="network__list">
+              <li class="network__list network--dark">
                 <a
                   href="https://facebook.com"
-                  class="network__link"
+                  class="network__link network--dark"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
-                  <div class="page-footer__network-button">
-                    <svg class="network__icon" width="20px" height="20px">
+                  <div class="network__button network--dark">
+                    <svg class="network__icon network--dark" width="20px" height="20px">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </div>
                 </a>
               </li>
-              <li class="network__list">
+              <li class="network__list network--dark">
                 <a
                   href="https://linkedin.com"
-                  class="network__link"
+                  class="network__link network--dark"
                   target="_blank"
                   rel="noopener noreferer nofollow"
                 >
-                  <div class="page-footer__network-button">
-                    <svg class="network__icon" width="20px" height="20px">
+                  <div class="network__button network--dark">
+                    <svg class="network__icon network--dark" width="20px" height="20px">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </div>
